# api-certify

./: .gitignore  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: verificacao.yaml
